# device_hisilicon_hardware

./: BUILD.gn  OAT.xml  bundle.json
ai/: BUILD.gn
display/: BUILD.gn
display/libs/: BUILD.gn
media/: build.sh
media/hal/camera/hi3516dv300/llvm/linux_standard/camera/: product.gni
multimedia/: BUILD.gn
