# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  group("hdi_display") {
    if (board_name == "hi3516dv300" || board_name == "hispark_taurus" ||
        board_name == "hi3518ev300" || board_name == "hispark_aries" ||
        board_name == "aegis_hi3516dv300") {
      deps = [ "libs:hdi_display" ]
    }
  }
} else {
  group("display_gralloc") {
    deps = [
      "//drivers/peripheral/display/hal/default_standard:def_display_gralloc",
    ]
  }

  group("display_device") {
    deps = [
      "//drivers/peripheral/display/hal/default_standard:def_display_device",
    ]
  }

  group("display_gfx") {
    deps = [ "libs:display_gfx" ]
  }

  #This lib is just used for video module with VO.
  group("display_layer") {
    deps = [ "libs:display_layer" ]
  }
}
