# Copyright (c) Hisilicon Technologies Co., Ltd. 2021-2021. All rights reserved.
if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//build/lite/config/subsystem/aafwk/path.gni")
  import("//build/lite/ndk/ndk.gni")
} else {
  import("//build/ohos.gni")
}

if (defined(ohos_lite)) {
  if (ohos_build_compiler == "clang" && ohos_kernel_type == "liteos_a") {
    copy("display_layer") {
      sources = [ "${board_name}/llvm/ohos/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board_name}/llvm/ohos/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board_name}/llvm/ohos/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  } else if (ohos_build_compiler == "clang" && ohos_kernel_type == "linux") {
    copy("display_layer") {
      sources = [ "${board_name}/llvm/linux/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board_name}/llvm/linux/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board_name}/llvm/linux/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  }

  if (ohos_build_ndk_target_host == "linux-x86_64" &&
      ohos_build_compiler == "gcc") {
    copy("display_layer") {
      sources = [ "${board_name}/gcc/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board_name}/gcc/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board_name}/gcc/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  }

  group("hdi_display") {
    deps = [
      ":display_gfx",
      ":display_gralloc",
      ":display_layer",
    ]
    if ((board_name == "hi3516dv300" || board_name == "hispark_taurus") &&
        ohos_kernel_type == "liteos_a") {
      deps += [ "//device/hisilicon/build/hi3516dv300:hi3516dv300_image" ]
    } else if (board_name == "hispark_taurus" && ohos_kernel_type == "linux") {
      deps += [ "//vendor/hisi/camera/dvkit_product/linux/hi3516dv300/Hi3516CV500_SDK_V2.0.3.0:linux_kernel" ]
    } else if ((board_name == "hi3518ev300" || board_name == "hispark_aries") &&
               ohos_kernel_type == "liteos_a") {
      deps += [ "//device/hisilicon/build/hi3518ev300:hi3518ev300_make_kernel" ]
    } else if (board_name == "aegis_hi3516dv300" &&
               ohos_kernel_type == "liteos_a") {
      deps += [
        "//device/hisilicon/aegis_hi3516dv300/build:aegis_hi3516dv300_image",
      ]
    }
  }
} else {
  group("hdi_display") {
    deps = [
      ":display_device",
      ":display_gfx",
      ":display_gralloc",
      ":display_layer",
    ]
  }

  ohos_prebuilt_shared_library("display_device") {
    source = "hispark_taurus/ext/libdisplay_device.z.so"
    subsystem_name = "hdf"
  }

  ohos_prebuilt_shared_library("display_gfx") {
    source = "hispark_taurus/ext/libdisplay_gfx.z.so"
    subsystem_name = "hdf"
  }

  ohos_prebuilt_shared_library("display_gralloc") {
    source = "hispark_taurus/ext/libdisplay_gralloc.z.so"
    subsystem_name = "hdf"
  }

  ohos_prebuilt_shared_library("display_layer") {
    source = "hispark_taurus/ext/libdisplay_layer.z.so"
    subsystem_name = "hdf"
  }
}
