# Copyright (c) Hisilicon Technologies Co., Ltd. 2021-2021. All rights reserved.
if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//build/lite/config/subsystem/aafwk/path.gni")
  import("//build/lite/ndk/ndk.gni")
} else {
  import("//build/ohos.gni")
}

if (defined(ohos_lite)) {
  if (ohos_build_compiler == "clang" && ohos_kernel_type == "liteos_a") {
    copy("display_layer") {
      sources = [ "${board_name}/llvm/ohos/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board_name}/llvm/ohos/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board_name}/llvm/ohos/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  } else if (ohos_build_compiler == "clang" && ohos_kernel_type == "linux") {
    copy("display_layer") {
      sources = [ "${board_name}/llvm/linux/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board_name}/llvm/linux/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board_name}/llvm/linux/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  }

  if (ohos_build_ndk_target_host == "linux-x86_64" &&
      ohos_build_compiler == "gcc") {
    copy("display_layer") {
      sources = [ "${board_name}/gcc/libdisplay_layer.so" ]
      outputs = [ "$root_out_dir/libdisplay_layer.so" ]
    }

    copy("display_gfx") {
      sources = [ "${board_name}/gcc/libdisplay_gfx.so" ]
      outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
    }

    copy("display_gralloc") {
      sources = [ "${board_name}/gcc/libdisplay_gralloc.so" ]
      outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
    }
  }

  group("hdi_display") {
    deps = [
      ":display_gfx",
      ":display_gralloc",
      ":display_layer",
    ]
  }
} else {
  group("hdi_display") {
    deps = [
      ":display_device",
      ":display_gfx",
      ":display_gralloc",
      ":display_layer",
    ]
  }

  ohos_prebuilt_shared_library("display_device") {
    if (use_musl) {
        source = "hispark_taurus/llvm/linux_standard/libdisplay_device.z.so"
    } else {
        source = "hispark_taurus/ext/libdisplay_device.z.so"
    }
    subsystem_name = "hdf"
  }

  ohos_prebuilt_shared_library("display_gfx") {
    if (use_musl) {
        source = "hispark_taurus/llvm/linux_standard/libdisplay_gfx.z.so"
    } else {
        source = "hispark_taurus/ext/libdisplay_gfx.z.so"
    }
    subsystem_name = "hdf"
  }

  ohos_prebuilt_shared_library("display_gralloc") {
    if (use_musl) {
        source = "hispark_taurus/llvm/linux_standard/libdisplay_gralloc.z.so"
    } else {
        source = "hispark_taurus/ext/libdisplay_gralloc.z.so"
    }
    subsystem_name = "hdf"
  }

  ohos_prebuilt_shared_library("display_layer") {
    if (use_musl) {
        source = "hispark_taurus/llvm/linux_standard/libdisplay_layer.z.so"
    } else {
        source = "hispark_taurus/ext/libdisplay_layer.z.so"
    }
    subsystem_name = "hdf"
  }
}
